1999-06-30  Laurent Pautet  <pautet@scapin.enst.fr>

	* NEWS: Update with the new features and the bug fixes since
 	glade-3.11.

1999-06-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in: Sanity directory is now an env. variable instead
 	of a configuration option (in order to test with a binary
 	release).

1999-04-15  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add Garlic/stamp-h.in to the distribution to avoid the 
	need for autoheader.

1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add 5lgarcon.ads and 5sgarcon.ads.

	* configure.in: If the ZIP filter has been selected, check for the 
	presence of the zlib to determine whether it needs to be built or
	not.
	Updated for autoconf 1.3.

1999-02-16  Samuel Tardieu <sam@inf.enst.fr>

	* configure.in: Add a test for the string.h header file.

1999-02-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure, configure.in, MANIFEST: Add Examples/Reconnection.

1999-01-11  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: print a warning if the user is not using GNU make
	(consequence of bug 6108-G02).

1998-12-01  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Add support for i?86-*-mingw32* targets.

1998-10-26  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add Garlic/5bgtplsp.ads to the distribution.

	* configure.in: Add support for AIX.

1998-10-26  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: If we know for sure that we do have
	thread-blocking I/O, then there is no need to include
	s-ganobl.ad[bs] in the compilation.

1998-10-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in: Generate at configuration time a default boot
	server address in order to avoid multi-user conflicts.

1998-10-21  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Fix bug reported by Pascal Obry.

1998-10-20  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: No need to clean isthrbio and friends anymore since 
	this program is no more built here.
