@@ -4,12 +4,14 @@
 
 configuration T_T is
 
-  pragma Starter (Ada);
+  pragma Starter (None);
 
   Part1 : Partition := ();
   Part2 : Partition := (Test_Remote_2);
   Part3 : Partition := (Test_Remote_3);
 
   procedure Test_Three is in Part1;
+
+  for Partition'Reconnection use Blocked_Until_Restart;
 
 end T_T;
