@@ -1,7 +1,7 @@
 1999-09-07  Laurent Pautet  <pautet@scapin.enst.fr>
 
 	* xe_stubs.adb: Change Fail_until_Restart into
- 	Failed_Unitil_Restart.
+ 	Failed_Until_Restart.
 
 1999-08-14  Pascal Obry <obry@gnat.com>
 
